feat: add search barbecue
